Provide new scalable default app icon
We don't want to see image-missing
icon in gnome-software UI.
I think it's not the right default / fallback for an app icon in GS.
We can use a new scalable default-app-icon
, when an app icon is not available for some reason.
- Refer #2200 (closed)
- Refer #2196 (closed)
- #2197 (closed)