gui: Fallback to "application-x-executable" icon instead of "system-component-application"

The "application-x-executable" seems to be more suitable as a fallback
when the app's icon could not be found for some reason.

Closes https://gitlab.gnome.org/GNOME/gnome-software/-/issues/2353